# cmocka-example

./: .gitignore  Makefile.am  configure.ac
src/: main.c  pipe-fds.c  pipe-fds.h
test/: pipe-fds_unit.c
